--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -15,3 +15,7 @@ jobs:
       - uses: Readme-Workflows/recent-activity@v2.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          TIMEZONE_OFFSET: "+3:00" 
+          DATE_STRING: "Last update: `{DATE}`" 
+          DATE_FORMAT: "dd.mm.yyyy HH:MM:ss"
