--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -15,5 +15,7 @@ jobs:
       - uses: Readme-Workflows/recent-activity@v2.4.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          CONFIG_FILE: "./.github/update_readme.config.yml"
 
         
