Added push icon

--- a/.github/update_readme.config.yml
+++ b/.github/update_readme.config.yml
@@ -1,6 +1,5 @@
 settings:
   date: 
     timezone: "GMT+03:00" 
- 
 messages:
-  push: ![push] Pushed {AMOUNT} commit(s) to {REPO}
+  push: "![push] Pushed {AMOUNT} commit(s) to {REPO}"
