--- a/.github/update_readme.config.yml
+++ b/.github/update_readme.config.yml
@@ -7,3 +7,13 @@ messages:
   pr_closed: "![pr_closed] Closed PR {ID} in {REPO}" 
   pr_merged: "![pr_merged] Merged PR {ID} in {REPO}"
   fork_repo: "![forked] Forked {FORK} from {REPO}"  
+  comments: "![msg] Commented on {ID} in {REPO}"
+  issue_opened: "![issue_opened] Opened issue {ID} in {REPO}"
+  issue_closed: "![issue_closed] Closed issue {ID} in {REPO}"
+  create_repo: "![create_repo] Created new repository {REPO}"
+  wiki_create: "![wiki] Created new wiki page {WIKI} in {REPO}"
+  changes_approved: "![approvedchanges] Approved {ID} in {REPO}"
+  changes_requested: "![requestedchanges] Requested {AMOUNT} change(s) for {ID} in {REPO}"
+  new_release: "![release] Released {ID} in {REPO}"
+  new_star: "![star] Starred {REPO}"
+  added_member: "![people] Became collaborator on {REPO}"
